[gd_scene load_steps=10 format=2]

[ext_resource path="res://juegodetriangulos/scenes/menu/pause_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://juegodetriangulos/res/scripts/misc/cursor.gd" type="Script" id=2]
[ext_resource path="res://juegodetriangulos/scenes/menu/extra_challenges_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://juegodetriangulos/res/scripts/misc/main.gd" type="Script" id=4]
[ext_resource path="res://juegodetriangulos/scenes/menu/main_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://juegodetriangulos/res/sprites/misc/bg_color_solid.png" type="Texture" id=6]
[ext_resource path="res://juegodetriangulos/res/sprites/misc/plain_light.png" type="Texture" id=7]
[ext_resource path="res://juegodetriangulos/res/scripts/misc/screen_shake.gd" type="Script" id=10]
[ext_resource path="res://juegodetriangulos/scenes/misc/lamugregames.tscn" type="PackedScene" id=11]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="ignore_darkness_light" type="Light2D" parent="."]
light_mask = 0
texture = ExtResource( 7 )
offset = Vector2( 960, 540 )
texture_scale = 10.0
range_item_cull_mask = 140

[node name="white_bg" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false

[node name="logo_animations" parent="." instance=ExtResource( 11 )]
visible = false
position = Vector2( 960, 540 )
playing = false

[node name="pause_menu" parent="." instance=ExtResource( 1 )]

[node name="main_menu" parent="." instance=ExtResource( 5 )]
layer = 0

[node name="extra_challenges_menu" parent="." instance=ExtResource( 3 )]

[node name="lighting" type="CanvasModulate" parent="."]
light_mask = 524288
z_index = -1
color = Color( 0, 0, 0, 1 )

[node name="cursor_light" type="Light2D" parent="."]
light_mask = 512
z_index = 99
z_as_relative = false
texture = ExtResource( 7 )
texture_scale = 0.5
range_item_cull_mask = 33
shadow_enabled = true
script = ExtResource( 2 )

[node name="screen_shake" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
current = true
smoothing_enabled = true
script = ExtResource( 10 )

[connection signal="start_game" from="main_menu" to="." method="game_start"]
